src/style.css
html,
body {
    overflow: hidden;
    margin: 0;
    padding: 0;
}

#introMenu,
#endMenu {
    background-color: black;
}

.webgl {
    position: fixed;
    top: 0;
    left: 0;
    outline: none;
    z-index: 2;
}

.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.menu {
    position: absolute;
    inset: 0;
    z-index: 10;
    background-color: rgba(0, 0, 0, 0.1);
    color: #fff;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    text-align: center;
    cursor: pointer;
}

.d-none {
    display: none;
}

canvas {
    /* border-radius: 15px; */
}

.loader {
    position: relative;
    background-color: #000;
    height: 100vh;
    width: 100vw;
    transition: 2s;
    z-index: 99;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hidden {
    opacity: 0;
}

.spin {
    animation: spin 2s ease-out 1s infinite;
    height: 3em;
    width: 3em;
    background-color: #fff;
    border-radius: 50%;
}

.user-interface {
    position: absolute;
    inset: 0;
    z-index: 5;
    color: #fff;
}

.user-interface__container {
    position: relative;
    width: 100%;
    height: 100%;
}

#score {
    position: absolute;
    top: 10px;
    left: 0;
    right: 0;
    text-align: center;
}

.player-position {
    z-index: 20;
    font-size: 16px;
    position: absolute;
    bottom: 10px;
    right: 10px;
    color: #fff;
}

.memories-overlay {
    position: absolute;
    inset: 0;
    background-color: #6eb6e2;
    opacity: 0;
    transition: 200ms ease-in;
}

.memories-overlay--visible {
    opacity: 0.6;
}

/* mobile */
@media (min-width: 981px) {
    #mobile {
        display: none;
    }
}

#mobile {
    background-color: rgb(33, 33, 33);
    height: 100svh;
}

.button {
    cursor: pointer;
    background: #fff;
    padding: 0.4em 1em;
    border: solid 1px #000;
    margin: 1em;
    font-size: 1.2rem;
}

ul {
    padding: 0;
    margin-top: 70px;
}

#mobile>h2 {
    position: absolute;
    top: 0;
    font-family: Arial, Helvetica, sans-serif;
    position: absolute;
    width: 100%;
}

#mobile .topBar {
    background-color: rgba(28, 28, 28, 0.784);
    color: rgb(240, 240, 240);
    position: fixed;
    top: 0;
    width: 100%;
    height: 6svh;
    z-index: 1;
    display: flex;
    align-items: center;
    gap: 15px;
    padding-left: 15px;
}

.pp {
    background-color: teal;
    border-radius: 50%;
    width: 35px;
    height: 35px;
}

#mobile .topBar h2 {
    margin: 0;
}

#msgsContainer {
    bottom: 6svh;
    overflow-y: scroll;
    padding-top: 40svh;
    max-height: calc(100svh - 46svh);
    min-height: fit-content;
    width: 100%;
    position: fixed;
    bottom: 12svh;
}

#msgs {
    padding: 6px;
    display: flex;
    flex-direction: column;
    height: 100%;
}

#mobile>h2::before {
    content: "Messages de : "
}

.msg {
    width: fit-content;
    padding: 7px 10px 7px 10px;
    margin: 5px;
    border-radius: 16px;
    font-family: Arial, Helvetica, sans-serif;
    background: #6eb6e2;
    color: rgb(33, 33, 33);
    align-self: end;
}

.msg.foreign {
    background-color: rgb(78, 78, 78);
    color: rgb(240, 240, 240);
    align-self: start;
}

.msg.info {
    color: rgb(240, 240, 240);
    background-color: rgba(0, 0, 0, 0);
    align-self: center;
}

.msg.last {
    animation: fadeIn 0.3s;
}

@keyframes fadeIn {
    from {
        transform: translateY(5px);
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.heart {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 20px;
    margin: auto;
    transform: translateY(100px);
}

.heart--popup {
    animation: popUp 2s ease-in-out;
}

@keyframes popUp {
    0% {
        transform: translateY(100px);
    }

    20% {
        transform: translateY(0px);
    }

    80% {
        transform: translateY(0px);
    }

    100% {
        transform: translateY(100px);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(-360deg);
    }
}

#responses {
    position: fixed;
    bottom: calc(5svh + 25px);
    height: fit-content;
    width: 100%;
    display: flex;
    justify-content: center;
}

.response {
    width: fit-content;
    padding: 5px 8px 5px 8px;
    margin: 5px;
    border-radius: 16px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 0.8em;
    background: #6eb6e240;
    border: #6eb6e2 1px solid;
    color: rgb(240, 240, 240);
}

#botBar {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 5svh;
    display: flex;
    padding: 15px;
    display: flex;
    align-items: center;
}

#botBar input {
    outline: none;
    border: none;
    border-radius: 4svh;
    padding: 15px;
    background-color: rgb(78, 78, 78);
    color: rgb(240, 240, 240);
    width: 70%;
}

#botBar input::placeholder {
    color: rgb(240, 240, 240);
}

#botBar button {
    outline: none;
    border: none;
    margin-left: 15px;
    color: rgb(240, 240, 240);
    background-color: rgba(0, 0, 0, 0);
    font-size: 2rem;
}

